--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,37 @@
-/home/pandaniel/.tmux.conf
+# split panes using h and v
+bind h split-window -h
+bind v split-window -v
+unbind '"'
+unbind %
+
+# set-option -g default-shell /bin/zsh
+
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+
+# List of plugins
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+set -g @catppuccin_window_default_fill "number"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+
+run '~/.tmux/plugins/tpm/tpm'
