--- a/bombadil.toml
+++ b/bombadil.toml
@@ -1,19 +1,12 @@
-# {dotfiles}/bombadil.toml
-
-# Path to your dotfiles relative to your $HOME directory
 dotfiles_dir = "IdeaProjects/.dotfiles"
 
 [settings]
-# An array of toml files paths containing the variables to inject in your templatized dotfiles
-# You can have multiple var files as long as variable names does not colide.
-#vars = [ "vars.toml" ]
+vars = ["home/git_vars.toml"]
 
-# An array of post install shell commands
-#posthooks = [ "sway reload" ]
+[profiles.competec]
+vars = ["competec/git_vars.toml"]
 
 [settings.dots]
-
-# A dot entry representing a symlink, `source` is relative to `dotfiles_dir`
-# and `target` shall be relative to $HOME directory or absolute.
 alacritty = { source = "alacritty.yml", target = ".config/alacritty/alacritty.yml" }
 tmux = { source = "tmux.conf", target = ".tmux.conf" }
+gitconfig = { source = "gitconfig", target = ".gitconfig"}
